handdetect: code refactoring of gst_handdetect_load_profile.

Change gst_handdetect_load_profile() so it can be used generically.

https://bugzilla.gnome.org/show_bug.cgi?id=752528